# MCPg

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  PLAN.md  PRIVACY.md  README.md  SECURITY.md  _config.yml  glama.json  llms-install.md  local-postgres.Dockerfile  pyproject.toml  server.json
.github/: PULL_REQUEST_TEMPLATE.md  ci-postgres-pg19.Dockerfile  ci-postgres-warehousepg.Dockerfile  ci-postgres.Dockerfile  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml  publish.yml
benchmarks/: README.md  __init__.py  bench.py
benchmarks/dashboard/: __init__.py  generate.py
benchmarks/datasets/: __init__.py  load_tpch.py  tpch_indexes.sql  tpch_schema.sql
benchmarks/perf/: __init__.py  concurrency.py  decompose.py  e2e.py  paths.py  queries.py  runner.py  schema.py  stats.py
benchmarks/results/: README.md  perf-sf1-pg16.html  perf-sf1-pg16.json  tokens-tier-a-sf1.json
benchmarks/tokens/: __init__.py  tokenize.py
benchmarks/tokens/tier_a/: __init__.py  comparisons.py  runner.py  schema.py
benchmarks/tokens/tier_b/: __init__.py  agent.py  model.py  runner.py  schema.py  tasks.py
demo_data/: pagila-insert-data.sql  pagila-schema.sql
deploy/: README.md  fly.toml
deploy/hfspace/: Dockerfile  README.md  deploy.py
docs/: PROGRESS.md  architecture.md  comparison-matrix.md  cookbook.md  demo.md  docker-db-setup.md  feature-shortlist.md  index.md  installation.md  integrations.md  parallel-roadmap.md  performance-benchmark.md  postgres-fdw-pushdown.md  release-notes-0.3.0.md  release-notes-0.4.0.md  release-notes-0.5.0.md  release-notes-0.6.0.md  release-notes-0.6.10.md  release-notes-0.6.11.md  release-notes-0.6.3.md  release-notes-0.6.4.md  release-notes-0.6.5.md  release-notes-0.6.6.md  release-notes-0.6.7.md  release-notes-0.6.8.md  release-notes-0.6.9.md  release-process.md  scaling.md  security-hardening.md  security.md  token-efficiency.md  tools.md  tour.md  usage.md  user-guide.md
docs/adr/: 0000-template.md  0001-build-approach.md  0002-technology-stack.md  0003-configurable-connection-pool.md  0004-subprocess-execution-policy.md  0005-listen-notify-delivery-model.md  0006-migration-shadow-strategy.md  0007-first-party-sql-kernel.md
docs/contributing/: adding-tools.md
docs/plans/: benchmark-suite.md  bm25-integration.md  devendor-sql-kernel.md  pg19-operations-playbook.md  pg19-readiness.md  pg_turboquant-integration.md  rag-efficiency-suite.md
docs/reviews/: devendor-sql-kernel-security-review.md  phase-b-README.md  phase-b-prompts.json  tool-surface-fact-pack.md
packaging/mcpb/: manifest.json  pyproject.toml  sync_version.py
packaging/mcpb/server/: main.py
packaging/smithery/: build.py
scratch/: pr_review.py  pr_review_report.md  pr_reviews.txt  seed_db.py  test_cypher.py  test_tq_live.py
scratch/pg_turboquant/src/: tq_pgvector_compat.c
scripts/: benchmark_pg19.py  benchmark_pg19.sh  smoke_test_pg19.py  smoke_test_pg19.sh
src/mcpg/: __init__.py  __main__.py  about.py  advisors.py  aio.py  audit.py  audit_integrity.py  audit_nl2sql.py  audit_trail.py  autovacuum.py  cache.py  composite.py  config.py  config_advisor.py  context.py  cron.py  cursors.py  cypher.py  data_movement.py  database.py  ddl_dryrun.py  demo.py  diagrams.py  diesel.py  drizzle.py  ecto.py  ent.py  extensions.py  graph.py  graph_diagram.py  graph_mgmt.py  graph_projection.py  headline_curator.py  health.py  http_runtime.py  indexing.py  introspection.py  io_stats.py  jooq.py  listen.py  (+61 more)
src/mcpg/_vendor/: README.md  __init__.py
src/mcpg/middleware/: rate_limit.py
src/mcpg/sql/: __init__.py  allowlist.py  (+2 more)
tests/contract/: test_describe_tool.py  test_doc_tables.py  test_mcp_prompts.py  test_mcp_resources.py  test_pg19_sql_characterisation.py  test_tool_annotations.py  test_tool_output_schemas.py  test_tool_return_shapes.py  test_tool_surface_snapshot.py  tool_return_shapes.snapshot.json  tool_surface.snapshot.json
tests/integration/: conftest.py  test_advisors_integration.py  test_audit_trail_integration.py  test_composite_integration.py  test_cron_integration.py  test_data_movement_integration.py  test_database_integration.py  test_demo_integration.py  test_diagrams_integration.py  test_diesel_integration.py  test_drizzle_integration.py  test_ecto_integration.py  test_ent_integration.py  test_extensions_integration.py  test_graph_integration.py  test_health_integration.py  test_indexing_integration.py  test_introspection_integration.py  test_jooq_integration.py  test_listen_integration.py  test_liveops_integration.py  test_load.py  test_maintenance_integration.py  test_migrations_integration.py  test_partman_integration.py  test_prisma_integration.py  test_query_integration.py  test_schema_diff_integration.py  test_sqlalchemy_integration.py  test_sqlc_integration.py  test_test_data_integration.py  test_textsearch_integration.py  test_tool_registration_integration.py  test_vector_tuning_integration.py  test_workload_integration.py  test_write_integration.py
tests/unit/: _fakes.py  test_about.py  test_advisors.py  test_aio.py  test_audit.py  test_audit_authentication.py  test_audit_events_migration.py  test_audit_integrity.py  test_audit_nl2sql.py  test_audit_redaction.py  test_audit_trail.py  test_autovacuum.py  test_bench_dashboard.py  test_bench_perf.py  test_bench_tier_b.py  test_bench_tokens.py  test_buffercache.py  test_cache.py  test_compact.py  test_composite.py  test_config.py  test_config_advisor.py  test_cron.py  test_cursor_cap.py  test_cursors.py  test_cypher.py  test_data_movement.py  test_database.py  test_ddl_dryrun.py  test_demo.py  test_diagrams.py  test_diesel.py  test_drizzle.py  test_ecto.py  test_ent.py  test_extensions.py  test_graph.py  test_graph_diagram.py  test_graph_mgmt.py  test_graph_projection.py  (+93 more)
tools/: analyse_tool_overlap.py  generate_demo_walkthrough.py  generate_doc_tables.py  observe_llm_behaviour.py  roadmap_linkage.py  static_tool_facts.py  summarise_llm_observations.py
(+1 files in other folders)
