[project]
name = "mcpg"
version = "0.5.0"
description = "A production-grade PostgreSQL Model Context Protocol (MCP) server."
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE", "src/mcpg/_vendor/LICENSE"]

dependencies = [
    "mcp[cli]>=1.25.0",
    "psycopg[binary]>=3.3.2",
    "psycopg-pool>=3.3.0",
    "pglast==7.11",
    "typing-extensions>=4.12",
    # httpx ships transitively via mcp; declare it explicitly so the
    # NL→SQL providers in mcpg.nl2sql have a guaranteed surface.
    "httpx>=0.27",
]

[project.scripts]
mcpg = "mcpg.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcpg"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
    "docker>=7.1.0",
    "ruff>=0.14.0",
    "mypy>=1.15.0",
    "pre-commit>=4.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: requires a live PostgreSQL (set MCPG_TEST_DATABASE_URL)",
]

[tool.coverage.run]
source = ["src/mcpg"]
omit = ["src/mcpg/_vendor/*"]

[tool.coverage.report]
# Coverage gate applies to authored code only; vendored code is excluded above.
fail_under = 90
show_missing = true

[tool.ruff]
line-length = 120
target-version = "py312"
# Vendored code is kept verbatim and is not linted/formatted to our standard.
extend-exclude = ["src/mcpg/_vendor", "tests/vendor"]
# Honour the exclusions even when files are passed explicitly (e.g. pre-commit).
force-exclude = true

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W", "N", "UP", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["mcpg"]

[tool.mypy]
python_version = "3.12"
strict = true
# Vendored code keeps its own (looser) typing; do not gate on it.
exclude = ["src/mcpg/_vendor/", "tests/vendor/"]

[[tool.mypy.overrides]]
module = ["mcpg._vendor.*"]
ignore_errors = true

[[tool.mypy.overrides]]
# pglast ships no type stubs.
module = ["pglast", "pglast.*"]
ignore_missing_imports = true
